# pytest-checkpoint

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pytest_checkpoint/: __init__.py  lap.py  plugin.py
src/pytest_checkpoint/tests/: test_checkpoint.py
