[project]
name = "pytest-checkpoint"
version = "0.1.0"
description = "Restore a checkpoint in pytest"
readme = "README.md"
authors = [
    { name = "Nick Grisafi", email = "njgrisafi@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
